# STM32F10x_cmake_template

./: CMakeLists.txt  README.md
App/src/: main.c
scripts/: openocd.cfg
